--- a/src/public/css/footer.css
+++ b/src/public/css/footer.css
@@ -1,5 +1,5 @@
 .footer-dark {
-  padding:50px 0;
+  padding:10vw 0;
   color:#f0f9ff;
   background-color:#282d32;
   bottom:0;
@@ -7,16 +7,16 @@
 
 .footer-dark h3 {
   margin-top:0;
-  margin-bottom:12px;
+  margin-bottom:0.8vw;
   font-weight:bold;
-  font-size:16px;
+  font-size:1.2vw;
 }
 
 .footer-dark ul {
   padding:0;
   list-style:none;
   line-height:1.6;
-  font-size:14px;
+  font-size:1vw;
   margin-bottom:0;
 }
 
@@ -30,44 +30,28 @@
   opacity:0.8;
 }
 
-@media (max-width:767px) {
-  .footer-dark .item:not(.social) {
-    text-align:center;
-    padding-bottom:20px;
-  }
-}
-
 .footer-dark .item.text {
-  margin-bottom:36px;
+  margin-bottom:3vw;
 }
 
-@media (max-width:767px) {
-  .footer-dark .item.text {
-    margin-bottom:0;
-  }
-}
 
 .footer-dark .item.text p {
   opacity:0.6;
   margin-bottom:0;
+  font-size: 1vw;
 }
 
 .footer-dark .item.social {
   text-align:center;
 }
 
-@media (max-width:991px) {
-  .footer-dark .item.social {
-    text-align:center;
-    margin-top:20px;
-  }
-}
+
 
 .footer-dark .item.social > a {
-  font-size:20px;
-  width:36px;
-  height:36px;
-  line-height:36px;
+  font-size:2vw;
+  width:3vw;
+  height:3vw;
+  line-height:3vw;
   display:inline-block;
   text-align:center;
   border-radius:50%;
@@ -83,8 +67,8 @@
 
 .footer-dark .copyright {
   text-align:center;
-  padding-top:24px;
+  padding-top:3vw;
   opacity:0.3;
-  font-size:13px;
+  font-size:1vw;
   margin-bottom:0;
 }
