--- a/src/public/css/header.css
+++ b/src/public/css/header.css
@@ -31,10 +31,10 @@ nav ul {
 
 nav li {
   display: inline-block;
-  margin-right: 15px;
-  margin-left: 20px;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  margin-right: 2vw;
+  margin-left: 2.5vw;
+  padding-top: 0.5vw;
+  padding-bottom: 2vw;
   position: relative;
   
 }
@@ -44,7 +44,7 @@ nav a {
   text-decoration: none;
 
   text-transform: uppercase;
-  font-size: 14px;
+  font-size: 1vw;
   
 }
 
@@ -57,11 +57,11 @@ nav a:hover {
 nav a::before {
   content: '';
   display: block;
-  height: 3px;
+  height: 0.2vw;
   background: #FFFFFF;
 
   position: absolute;
-  top: 40px;
+  top: 2.4vw;
   width: 0%;
 
   transition: all ease-in-out 250ms;
