--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -1,6 +1,6 @@
 
 
-body { background-color: white !important; }
+body { background-color: white !important; zoom: 100%; }
 
 .imagem_banner_home{
   background-image: url("../images/foto_home.jpg");
@@ -23,7 +23,8 @@ body { background-color: white !important; }
 .imagem_fundo_meio{
   background-image: url("../images/mulher_barra.jpg");
   min-height: 40vw;
-  padding-bottom: 10px;
+  padding-bottom: 2vw;
+  padding-top: 3vw;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -34,9 +35,7 @@ body { background-color: white !important; }
 .imagem_texto_1{
   display: flex;
   justify-content: center;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 20px;
+
   
 }
 
@@ -55,37 +54,34 @@ body { background-color: white !important; }
 }
 
 .imagem_texto_1_texto h2{
-  margin-top: 10px;
-  margin-left: 12px;
+  margin-top: 0.5vw;
+  margin-left: 1vw;
   font-size: 3vw;
 
 }
 
 .imagem_texto_1_texto p{
-  margin-top: 10px;
-  margin-left: 12px;
+  margin-top: 0.5vw;
+  margin-left: 1.5vw;
   font-size: 2vw;
-  margin-right: 12px;
+  margin-right: 1vw;
   text-align: justify;
   float: left;
 }
 
 .imagem_texto_1_texto hr {
-  border: 3px solid rgb(181, 180, 180);
-  width: 50%;
+  border: 0.17vw solid rgb(89, 88, 88);
+  width: 60%;
   float: left;
-  margin-top: px;
-  margin-left: 12px;
-  border-radius: 5px;
+  clear: both;
+  margin-left: 1.5vw;
+  border-radius: 5vw;
 }
 
 
 .imagem_texto_2{
   display: flex;
   justify-content: center;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 20px;
   
 }
 
@@ -102,40 +98,12 @@ body { background-color: white !important; }
 
 }
 
-.imagem_texto_2_texto{
-  float: left;
-  background: #ffffff;
-  height: 40vw;
-  width: 60vw;
-}
 
-
-.imagem_texto_2_texto h2{
-  margin-top: 10px;
-  margin-left: 22px;
-
-}
-
-.imagem_texto_2_texto p{
-  margin-top: 10px;
-  margin-left: 22px;
-  font-size: 2vw;
-  float: left;
-}
-
-.imagem_texto_2_texto hr {
-  border: 3px solid rgb(181, 180, 180);
-  width: 50%;
-  float: left;
-  margin-top: px;
-  margin-left: 22px;
-  border-radius: 5px;
-}
 
 .lista_card_precos{
   display: flex;
   position:relative;
-  margin-right: 50px;
+  margin-right: 3vw;
   justify-content: center;
   padding: 2vw;
   list-style-type: none;
@@ -146,7 +114,7 @@ body { background-color: white !important; }
   box-shadow: 4px 4px 4px 4px rgba(0.5,0.7,0.7,0.5);
   display: inline-block;
   list-style: none;
-  margin-left: 50px;
+  margin-left: 4vw;
   height: 31.9vw;
   width: 40vw;
   border-style: solid;
@@ -156,7 +124,7 @@ body { background-color: white !important; }
 .card_precos button {
   border: 0.1vw solid #babfc4;
   border-radius: 0.3vw;
-  margin-top: 2px;
+  margin-top: 0.002vw;
   padding: 0.6vw 1.2vw;
   width: 12vw;
   font-size: 1.5vw;
@@ -204,7 +172,7 @@ body { background-color: white !important; }
 
 .lista_card_precos_1_baixo{
   background-color: #181818 !important;
-  height: 17.5vw;
+  height: 17.45vw;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -232,18 +200,17 @@ body { background-color: white !important; }
 .lista_card_infos{
   display: flex;
   position:relative;
-  margin-right: 60px;
+  margin-right: 4vw;
   justify-content: center;
   padding: 1.5vw;
   list-style-type: none;
 }
 
 .lista_card_infos li{
-  box-shadow: 2px 2px 4px 2px rgba(0.5, 0.5, 0.5, 0.5);
+  
   display: inline-block;
   list-style: none;
-  
-  margin-left: 60px;
+  margin-left: 4.5vw;
   height: 15vw;
   width: 30.5vw;
 }
@@ -255,7 +222,7 @@ body { background-color: white !important; }
   align-items: center;
   height: 15vw;
   width: 100%;
-  box-shadow: 0 0 0 4px rgb(255, 255, 255)
+  box-shadow: 0 0 0 0.3vw rgb(255, 255, 255)
 
 }
 
@@ -267,45 +234,43 @@ body { background-color: white !important; }
 
 
 
-
-
-
 .fundo_imagem_final{
   background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("../images/academia.jpg");
   min-height: 30vw;
-  padding-bottom: 10px;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
   display: flex;
   justify-content: center;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 20px;
+  padding-left: 2vw;
+  padding-top: 2vw;
+  padding-right: 1vw;
+
 }
 
 
 .fundo_imagem_final h1{
   color:white;
   font-size: 4vw;
-  margin-left: 22px;
+  margin-left: 2vw;
 }
 
 .fundo_imagem_final h2{
   color:white;
   font-size: 3.5vw;
-  margin-left: 22px;
-  margin-top: 70px;
+  margin-left: 2vw;
+  margin-top: 5vw;
   
 }
 
 .fundo_imagem_final hr {
-  border: 3px solid rgb(181, 180, 180);
-  width: 40%;
+  border: 0.17vw solid rgb(89, 88, 88);
+  width: 60%;
+  height: 0.01vw;
   float: left;
-  margin-left: 22px;
-  border-radius: 5px;
+  margin-left: 2vw;
+  border-radius: 1vw;
 }
 
 .fundo_imagem_final_1{
@@ -315,20 +280,20 @@ body { background-color: white !important; }
 }
 
 .fundo_imagem_final_2{
-  margin-top: 25px;
+  margin-top: 1vw;
   height: 30vw;
   width: 60vw;
-  margin-left: 150px;
+  margin-left: 7vw;
   overflow: auto;
   
 
 }
 
 .btn_enviar{
-  border: 2px solid #babfc4 ;
-  border-radius: 6px;
-  margin-top: 2px;
-  padding: 10px 17px;
+  border: 0.2vw solid #babfc4 ;
+  border-radius: 0.5vw;
+  margin-top: 0.1vw;
+  padding: 0.7vw 1vw;
   width: 8vw;
   font-size: 1.5vw;
   color: #d8dadd;
@@ -336,8 +301,8 @@ body { background-color: white !important; }
   cursor: pointer;
   font-weight: 500;
   transition: all .5s;
-  position: absolute;
-  margin-left: 5px;
+  
+  margin-left: 0.3vw;
   background-color: Transparent !important;
 }
 
@@ -345,15 +310,19 @@ body { background-color: white !important; }
 
 .form_texto{
   width: 84%;
-  margin-bottom: 5px;
-  padding: 5px;
-  border-radius: 5px;
+  height: 3vw;
+  margin-bottom: 1vw;
+  padding: 0.2vw;
+  border-radius: 0.5vw;
+  font-size: 1vw;
 }
 
 .form_texto_grande{
+  font-size: 1vw;
+  height: 5vw;
   width: 69%;
-  margin-bottom: 5px;
-  margin-top: 5px;
-  margin-left: 5px;
-  border-radius: 5px;
+  margin-bottom: 0.5vw;
+  margin-top: 0.5vw;
+  margin-left: 0.3vw;
+  border-radius: 0.5vw;
 }
