--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -1,15 +1,4 @@
-@media screen and (max-width: 1060px) {
-  #primary { width:67%; }
-  #secondary { width:30%; margin-left:3%;}  
-}
-
-/* Tabled Portrait */
-@media screen and (max-width: 768px) {
-  #primary { width:100%; }
-  #secondary { width:100%; margin:0; border:none; }
-}
-
-body{background-color: black !important;}
+html , body{background-color: black !important; }
 
 .container_menu {
 	width: 90%;
@@ -35,18 +24,18 @@ nav {
 
 nav ul {
   margin: 0;
-  margin-left: 10px;
+  margin-left: 1vw;
   float: left;
-  padding: 10px;
+  padding: 0.5vw;
   list-style: none;
 }
 
 nav li {
   display: inline-block;
   float: left;
-  padding-top: 8px;
+  padding-top: 1vw;
 
-  margin-right: 37px;
+  margin-right: 3vw;
   position: relative;
 }
 
@@ -56,7 +45,7 @@ nav a {
   color: rgb(255, 255, 255);
   text-decoration: none !important;
   text-transform: uppercase;
-  font-size: 14px;
+  font-size: 1vw;
 }
 
 nav a:hover {
@@ -66,10 +55,10 @@ nav a:hover {
 nav a::before {
   content: '';
   display: block;
-  height: 3px;
+  height: 0.2vw;
   background-color: rgb(245, 244, 244);
   position: absolute;
-  top: 32px;
+  top: 2.8vw;
   width: 0%;
 
   transition: all ease-in-out 250ms;
@@ -84,45 +73,48 @@ nav a:hover::before {
 
 .login_container {
     background-color: rgb(255, 255, 255);
-    width: 550px;
-    height: 540px;
-    border: 5px solid rgb(255, 255, 255);
-    box-shadow: 2px 2px 4px 4px rgb(255, 255, 255);
-    padding: 50px;
-    margin-top: 35px;
-    margin-left: 400px;
-    margin-bottom: 50px;
+    width: 39.5vw;
+    height: 37vw;
+    box-shadow: 0.2vw 0.2vw 0.2vw 0.2vw rgb(255, 255, 255);
+    padding: 4vw;
+    border: 5vw;
+    margin-top: 4vw;
+    margin-left: 29vw;
+    margin-bottom: 5vw;
   }
   
   .login_container h1{
     display: flex;
     justify-content: center;
-    margin-bottom: 70px;
+    margin-bottom: 5vw;
+    font-size: 3.5vw;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
 
  
   .form_texto{
     width: 100.5%;
-    margin-bottom: 5px;
-    padding: 5px;
-    border-radius: 5px;
+    height: 2.5vw;
+    margin-bottom: 0.8vw;
+    font-size: 1.3vw;
+    padding: 0.3vw;
+    border-radius: 0.3vw;
   }
 
   .btn_enviar{
-      border: 2px solid #1d1d1d ;
-      border-radius: 6px;
-      margin-top: 2px;
-      padding: 10px 17px;
-      width: 435px;
-      font-size: 20px;
+      border: 0.2vw solid #1d1d1d ;
+      border-radius: 0.5vw;
+      margin-top: 0.2vw;
+      padding: 1vw 2vw;
+      width: 31.2vw;
+      font-size: 1.5vw;
       color: #0f1216;
       transition: all .2s ease-in-out;
       cursor: pointer;
       font-weight: 500;
       transition: all .5s;
       position: absolute;
-      margin-left: 5px;
+      margin-left: 0.4vw;
       background-color: Transparent !important;
     
   }
